cmake_minimum_required(VERSION 3.22)
project(CSC_Cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(CSC_Cpp main.cpp algs.cpp links.cpp hw_2_6.cpp 2d_arrays.cpp structs.cpp hw_3_5.cpp consts.cpp hw_3_3.cpp Int_Array.cpp Int_Array.h hw_4_1.cpp hw_4_2.cpp csc_cpp_4_2.cpp toy_classes_constructs.cpp hw_4_4_smartPtr.cpp step_5_1.cpp hw_5_2.cpp visitor_test.cpp step_5_4_static.cpp step_5_5_friend.cpp step_5_6_singleton.cpp step_6_1_templates.cpp)
